<resources>
    <string name="app_name">Routine Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time : </string>
    <string name="work">Work :</string>
    <string name="rest">"Rest : "</string>
    <string name="start_pomadoro">Start</string>
    <string name="change_pomadoro">Change active countdown timer</string>
    <string name="time_template" translatable="false">00:00:00</string>
    <string name="am" translatable="false">AM</string>
    <string name="pause_pomadoro">Pause</string>
    <string name="stop_pomadoro">Stop pomadoro</string>
    <string name="resume_pomadoro">Resume</string>
    <string name="pomadoro_notification_title">Pomadoro ends</string>
    <string name="pomadoro_notification_text">Time is up!</string>
    <string name="text_while_time_zero">Time must be more than zero</string>
    <string name="ask_for_notification">Allow notifications in Settings</string>
    <string name="pomadoro_label">Pomadoro</string>
    <string name="pomadoro_notification_description_silent">Pomadoro notification settings for silent messages</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pomadoro_service_description">Pomadoro running</string>
    <string name="routine_label">Rotine</string>
    <string name="pomadoro_time_left">"Time left: "</string>
    <string name="pomadoro_notification_description_loud">Pomadoro notification settings for loud messages</string>
</resources>